--- a/_config.yaml
+++ b/_config.yaml
@@ -1,5 +1,5 @@
 # site properties and page defaults
-title: miekoyao
+title: History of Insulin: an Interactive Exhibit
 subtitle: 
 description: An engaging 1-3 sentence description of your lab.
 header: images/background.jpg
@@ -8,10 +8,10 @@ proofer: false
 
 # site social media and other links
 links:
-  email: contact@miekoyao.com
+  email: mieko.yao@mail.utoronto.ca
   orcid: 0000-0001-8713-9213
   google-scholar: ETJoidYAAAAJ
-  github: miekoyao
+  github: https://github.com/miekoyao/
   twitter: miekoyao
   youtube: miekoyao
 
