--- a/_config.yaml
+++ b/_config.yaml
@@ -11,7 +11,7 @@ links:
   email: mieko.yao@mail.utoronto.ca
   orcid: 0000-0001-8713-9213
   google-scholar: ETJoidYAAAAJ
-  github: https://github.com/miekoyao/
+  github: miekoyao
   twitter: miekoyao
   youtube: miekoyao
 
