--- a/_config.yaml
+++ b/_config.yaml
@@ -1,5 +1,5 @@
 # site properties and page defaults
-title: History of Insulin: an Interactive Exhibit
+title: HistoryOfInsulin
 subtitle: 
 description: An engaging 1-3 sentence description of your lab.
 header: images/background.jpg
