--- a/_config.yaml
+++ b/_config.yaml
@@ -1,5 +1,5 @@
 # site properties and page defaults
-title: "History Of Insulin"
+title: "History Of Insulin Exhibit"
 subtitle: 
 description: An engaging 1-3 sentence description of your lab.
 header: images/background.jpg
