--- a/_config.yaml
+++ b/_config.yaml
@@ -1,7 +1,7 @@
 # site properties and page defaults
 title: "History Of Insulin Exhibit"
 subtitle: 
-description: An engaging 1-3 sentence description of your lab.
+description: Project website for CSC490 Capstone design course.
 header: images/background.jpg
 footer: images/background.jpg
 proofer: false
