--- a/_data/projects.yaml
+++ b/_data/projects.yaml
@@ -1,12 +1,12 @@
-- title: Cool Dataset
+- title: Centrifuge
   subtitle: a subtitle
   group: featured
   image: images/photo.jpg
-  link: https://github.com/
+  link: /components/centrifuge
   description: Lorem ipsum _dolor sit amet_, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-  repo: greenelab/lab-website-template
+  # repo: greenelab/lab-website-template
   tags:
-    - resource
+    - component
 
 - title: Cool Package
   subtitle: a subtitle
