--- a/_data/projects.yaml
+++ b/_data/projects.yaml
@@ -1,9 +1,9 @@
 
 - title: Introduction & Educational Content
   subtitle: a subtitle
-  group: background
+  group: text
   image: images/photo.jpg
-  link: /components/intro
+  link: /text/intro
   description: Lorem ipsum _dolor sit amet_, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
   # repo: greenelab/lab-website-template
   tags:
