Adding some more stuff to various pages

--- a/_data/projects.yaml
+++ b/_data/projects.yaml
@@ -1,13 +1,12 @@
 
 - title: Introduction & Educational Content
-  subtitle: a subtitle
   group: text
   image: images/photo.jpg
   link: /text/intro
-  description: Lorem ipsum _dolor sit amet_, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+  description: Detailed voiceovers and educational info.
   # repo: greenelab/lab-website-template
   tags:
-    - text
+    - 
 
 - title: Mixing Flasks
   group: components
@@ -19,9 +18,8 @@
     - 
     
 - title: Centrifuge
-  subtitle: a subtitle
   group: components
-  image: images/photo.jpg
+  image: images/centrifuge_and_crank.jpg
   link: /components/centrifuge
   description: A mock centrifuge using a hand crank and motorized spinning mechanism.
   # repo: greenelab/lab-website-template
@@ -30,7 +28,6 @@
 
 
 - title: Syringe & Layer Extraction
-  subtitle: a subtitle
   group: components
   image: images/photo.jpg
   link: /components/syringe
@@ -40,7 +37,6 @@
     - 
 
 - title: Marjorie
-  subtitle: a subtitle
   group: components
   image: images/photo.jpg
   link: /components/dog
